Add TODOs for intersection logic in Cylinder, Polygon, and Tube classes; improve code formatting in SphereTest